cmake_minimum_required(VERSION 3.24)
project(C___Study)

set(CMAKE_CXX_STANDARD 11)
add_executable(_02 02.数据类型.cpp)
add_executable(_03 03.流程控制.cpp)
add_executable(_04 04.数组.cpp)
add_executable(_05 05.函数.cpp)
add_executable(_06 06.函数分文件编写.cpp swap.cpp)
add_executable(_07 07.指针.cpp)
add_executable(_08 08.结构体.cpp)


